Cycles incorrect final render, proper viewport #43156

Closed
opened 2015-01-08 01:48:57 +01:00 by Tommy Hjalmarsson · 16 comments

System Information
NVIDIA G80 [GeForce 8800 GTS]
Ubuntu Studio 14,04 64bit
Blender Version
2.73
Cycles

Short description of error
See image, Render error
https://tommyhjalmarsson.files.wordpress.com/2015/01/screenshot-2015-01-08-011452.png

Exact steps for others to reproduce the error
Shader: Simple Skin Shader (and more) and a PNG mask on the end of the node tree for the white shader (with the clown face texture)
(Simple Skin Shader: http://pyroevil.com/simple-skin-shader-v1-0/)

View port render is correct, the render is not

2,72b is honky dory, 2,73 is not.

Same file rendered in 2,72b:
https://tommyhjalmarsson.files.wordpress.com/2015/01/she_2-72.png

**System Information** NVIDIA G80 [GeForce 8800 GTS] Ubuntu Studio 14,04 64bit **Blender Version** 2.73 Cycles **Short description of error** See image, Render error https://tommyhjalmarsson.files.wordpress.com/2015/01/screenshot-2015-01-08-011452.png **Exact steps for others to reproduce the error** Shader: Simple Skin Shader (and more) and a PNG mask on the end of the node tree for the white shader (with the clown face texture) (Simple Skin Shader: http://pyroevil.com/simple-skin-shader-v1-0/) View port render is correct, the render is not 2,72b is honky dory, 2,73 is not. Same file rendered in 2,72b: https://tommyhjalmarsson.files.wordpress.com/2015/01/she_2-72.png

Changed status to: 'Open'

Changed status to: 'Open'
Tommy Hjalmarsson self-assigned this 2015-01-08 01:48:57 +01:00

Added subscriber: @hjalle

Added subscriber: @hjalle

Sorry I forgot:
CPU render

Sorry I forgot: CPU render

Added subscriber: @Sergey

Added subscriber: @Sergey

We need simple .blend file which demonstrates the issue. I can not confirm the issue with the demo model from the skin shader page.

We need simple .blend file which demonstrates the issue. I can not confirm the issue with the demo model from the skin shader page.
Sergey Sharybin changed title from Cycles to Cycles incorrect final render, proper viewport 2015-01-08 09:08:16 +01:00

I can't repeat it on a new mesh either. I don't think it's a shader problem anymore.
The mesh is perhaps corrupt.

I go through the file/modifiers/object step by step today, I return when I know more.

Cheers!

I can't repeat it on a new mesh either. I don't think it's a shader problem anymore. The mesh is perhaps corrupt. I go through the file/modifiers/object step by step today, I return when I know more. Cheers!
Tommy Hjalmarsson was unassigned by Aaron Carlisle 2015-01-08 21:31:34 +01:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@hjalle, do you have any news for us?

@hjalle, do you have any news for us?

At last I can point at something that change the rendering in 2.73. Deleting the Armature modifier.

DOWNLOAD Blend file: "#43156.blend" and texture in a ZIP file
https://dl.dropboxusercontent.com/u/15967513/Share/T43156_Cycles_incorrect_final_render_proper_viewport.zip

Explaining image in folder SEE_IMAGE/image.png

Do it like this:

load "#43156.blend" in Blender 2.72b and render

load "#43156.blend" in Blender 2.73 and render view port, and render image......and then....

......Delete the Armature modifier and render again.

NVIDIA G80 [GeForce 8800 GTS]
Ubuntu Studio 14,04 64bit
Blender Version
2.73
Cycles

At last I can point at something that change the rendering in 2.73. Deleting the Armature modifier. DOWNLOAD Blend file: "#43156.blend" and texture in a ZIP file https://dl.dropboxusercontent.com/u/15967513/Share/T43156_Cycles_incorrect_final_render_proper_viewport.zip Explaining image in folder SEE_IMAGE/image.png Do it like this: load "#43156.blend" in Blender 2.72b and render load "#43156.blend" in Blender 2.73 and render view port, and render image......and then.... ......Delete the Armature modifier and render again. NVIDIA G80 [GeForce 8800 GTS] Ubuntu Studio 14,04 64bit **Blender Version** 2.73 Cycles
Sergey Sharybin self-assigned this 2015-01-13 15:44:04 +01:00

Can confirm the difference. Looking into it now.

Can confirm the difference. Looking into it now.

This issue was referenced by 3f0113be4d

This issue was referenced by 3f0113be4ddb75e1e4dd159e58112e8c45ebdb12

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3f0113be4d.

Closed by commit 3f0113be4d.

This issue was referenced by blender/cycles@6d2caa0b27

This issue was referenced by blender/cycles@6d2caa0b27f8940d93e50f05b9d7a36870aeff24

This issue was referenced by 57087245a4

This issue was referenced by 57087245a46aae1674922fc6ab74a03cf3fbd1cf
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43156
No description provided.